--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+@import url("./bulma.min.css");
+@import url("./fa-all.min.css");
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,4 +8,13 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+.upload-button {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.file-type {
+  margin-right: 1em;
 }
