--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,13 +1,37 @@
 extends layout
 
 block content
-  h1= path
+  h1(class="title")= path
 
   form(action="/" method="post" enctype="multipart/form-data")
-    label(for="file") Select a file to upload
-    input(type="file" name="file")
-    button(action="submit") Upload
 
-  ul
-  each file in files
-    li= file
+    div(class="file")
+      label(class="file-label")
+        input(class="file-input" type="file" name="file")
+        span(class="file-cta")
+          span(class="file-icon")
+            i(class="fas fa-upload")
+        
+          span(class="file-label")
+          | Choose a file…
+      
+    button(action="submit" class="button is-primary upload-button") Upload
+  
+    table(class="table")
+      tr
+        th Name
+        th Size
+        th Created
+        th Modified
+      each file in files
+        tr
+          td 
+            if file.isDirectory
+              i(class="fas fa-folder file-type")
+            else
+              i(class="fas fa-file file-type")
+            | #{file.name}
+          td= file.size
+          td= file.created
+          td= file.modified
+      
